--- a/src/structures/ppke/index.yaml
+++ b/src/structures/ppke/index.yaml
@@ -16,6 +16,6 @@ projects:
     name: vojdi von
     years: [ 2020, 2022 ]
     img: ../instances/kosice.webp
-    caption: A list of friendly projects and organisations of [Paralelná Polis Košice](/i/kosice).
+    caption: A list of friendly projects and organisations of [Paralelná Polis Košice](/s/ppke).
     refs:
       web: https://vojdivon.sk
