--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -284,6 +284,15 @@
     meetup_id: '300284665'
     meetup: https://www.meetup.com/paralelnipolis/events/300284665/
 
+- id: w3pn-berlin-2024
+  name: Web3Privacy Now Berlin 2024
+  date: "2024-05-24"
+  project: w3pn-events
+  seq: 6
+  place:
+    city: Berlin
+    country: de
+
 - id: w3pn-summit-prague-2024
   name: Web3Privacy Now Prague 2024
   date: "2024-05-30"
