--- a/src/books/books.yaml
+++ b/src/books/books.yaml
@@ -50,3 +50,14 @@
     In the years after 9/11, the U.S. government, working with scores of anonymous companies, many scattered across bland Northern Virginia suburbs, built a foreign and domestic surveillance apparatus of breathtaking scope—one that can peer into the lives of nearly everyone on the planet. This cottage industry of data brokers and government bureaucrats has one directive—“get everything you can”—and the result is a surreal world in which defense contractors have marketing subsidiaries and marketing companies have defense contractor subsidiaries. And the public knows virtually nothing about it.
 
     Sobering and revelatory, Means of Control is the defining story of our dangerous grand bargain—ubiquitous cheap technology, but at what price?
+
+- id: stuck-on-the-platform-by-geert-lovink
+  name: "Stuck on the Platform: Reclaiming the Internet"
+  year: 2022
+  authors:
+    - Geert Lovink
+  img: stuck-on-the-platform-by-geert-lovink.jpg
+  refs:
+    web: https://networkcultures.org/blog/publication/stuck-on-the-platform/
+  description: |
+    We’re all trapped. No matter how hard you try to delete apps from your phone, the power of seduction draws you back. Doom scrolling is the new normal of a 24/7 online life. What happens when your home office starts to feel like a call center and you’re too fried to log out of Facebook? We’re addicted to large-scale platforms, unable to return to the frivolous age of decentralized networks. How do we make sense of the rising disaffection with the platform condition? Zoom fatigue, cancel culture, crypto art, NFTs and psychic regression comprise core elements of a general theory of platform culture. Geert Lovink argues that we reclaim the internet on our own terms. Stuck on the Platform is a relapse-resistant story about the Brexit-Trump-Covid period (2019-2021), written for those with a passion for platform alternatives, built on a deep understanding of the digital slump.
