--- a/src/books/books.yaml
+++ b/src/books/books.yaml
@@ -61,3 +61,16 @@
     web: https://networkcultures.org/blog/publication/stuck-on-the-platform/
   description: |
     We’re all trapped. No matter how hard you try to delete apps from your phone, the power of seduction draws you back. Doom scrolling is the new normal of a 24/7 online life. What happens when your home office starts to feel like a call center and you’re too fried to log out of Facebook? We’re addicted to large-scale platforms, unable to return to the frivolous age of decentralized networks. How do we make sense of the rising disaffection with the platform condition? Zoom fatigue, cancel culture, crypto art, NFTs and psychic regression comprise core elements of a general theory of platform culture. Geert Lovink argues that we reclaim the internet on our own terms. Stuck on the Platform is a relapse-resistant story about the Brexit-Trump-Covid period (2019-2021), written for those with a passion for platform alternatives, built on a deep understanding of the digital slump.
+
+- id: psycho-politics-by-byung-chul-han
+  name: "Psychopolitics: Neoliberalism and New Technologies of Power"
+  year: 2017
+  authors:
+    - Byung-Chul Han
+  img: psycho-politics-by-byung-chul-han.jpg
+  refs:
+    amazon: https://www.amazon.com/Psychopolitics-Neoliberalism-New-Technologies-Power/dp/1784785776
+  description: |
+    Exploring how neoliberalism has discovered the productive force of the psyche
+
+    Byung-Chul Han, a star of German philosophy, continues his passionate critique of neoliberalism, trenchantly describing a regime of technological domination that, in contrast to Foucault’s biopower, has discovered the productive force of the psyche. In the course of discussing all the facets of neoliberal psychopolitics fueling our contemporary crisis of freedom, Han elaborates an analytical framework that provides an original theory of Big Data and a lucid phenomenology of emotion. But this provocative essay proposes counter models too, presenting a wealth of ideas and surprising alternatives at every turn.
