book: cypherpunk ethics

--- a/src/books/books.yaml
+++ b/src/books/books.yaml
@@ -74,3 +74,18 @@
     Exploring how neoliberalism has discovered the productive force of the psyche
 
     Byung-Chul Han, a star of German philosophy, continues his passionate critique of neoliberalism, trenchantly describing a regime of technological domination that, in contrast to Foucault’s biopower, has discovered the productive force of the psyche. In the course of discussing all the facets of neoliberal psychopolitics fueling our contemporary crisis of freedom, Han elaborates an analytical framework that provides an original theory of Big Data and a lucid phenomenology of emotion. But this provocative essay proposes counter models too, presenting a wealth of ideas and surprising alternatives at every turn.
+
+- id: cypherpunk-ethics-by-patrick-d-anderson
+  name: "Cypherpunk Ethics: Radical Ethics for the Digital Age"
+  year: 2022
+  authors:
+    - Patrick D. Anderson
+  img: cypherpunk-ethics-by-patrick-d-anderson.jpg
+  refs:
+    amazon: https://www.amazon.com/Cypherpunk-Ethics-Radical-Digital-Routledge/dp/1032113596
+  description: |
+    Cypherpunk Ethics explores the moral worldview of the cypherpunks, a movement that advocates the use of strong digital cryptography―or crypto, for short―to defend individual privacy and promote institutional transparency in the digital age.
+
+    Focusing on the writings of Timothy May and Julian Assange, two of the most prolific and influential cypherpunks, the book examines two competing paradigms of cypherpunk philosophy―crypto anarchy and crypto justice―and examines the implications of cypherpunk ethics for a range of contemporary moral issues, including surveillance, privacy, whistleblowing, cryptocurrencies, journalism, democracy, censorship, intellectual property, and power.
+
+    Rooted in theory but with very real applications, this volume will appeal not only to students and scholars of digital media, communication, journalism, philosophy, political science, critical data studies, sociology, and the history of technology but also to technologists and activists around the world.
