people: andy greenberg

--- a/src/books/books.yaml
+++ b/src/books/books.yaml
@@ -5,7 +5,7 @@
   refs:
     amazon: https://www.amazon.com/Tracers-Dark-Global-Crime-Cryptocurrency/dp/0385548095
   authors:
-    - Andy Greenberg
+    - Andy Greenberg|andy-greenberg
   description: |
     From the award-winning author of Sandworm comes the propulsive story of a new breed of investigators who have cracked the Bitcoin blockchain, exposing once-anonymous realms of money, drugs, and violence. “I love the book… It reads like a thriller… These stories are amazing.” (Michael Lewis)
 
