--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -1184,3 +1184,9 @@
   img: ameen-soleimani.jpg
   refs:
     twitter: ameensol
+
+- id: andy-greenberg
+  name: Andy Greenberg
+  img: andy-greenberg.jpg
+  refs:
+    twitter: a_greenberg
