people: mykola siusko

--- a/src/books/books.yaml
+++ b/src/books/books.yaml
@@ -61,6 +61,7 @@
   img: stuck-on-the-platform-by-geert-lovink.jpg
   refs:
     web: https://networkcultures.org/blog/publication/stuck-on-the-platform/
+    amazon: https://www.amazon.com/Stuck-Platform-Reclaiming-Geert-Lovink/dp/9493246086
   description: |
     We’re all trapped. No matter how hard you try to delete apps from your phone, the power of seduction draws you back. Doom scrolling is the new normal of a 24/7 online life. What happens when your home office starts to feel like a call center and you’re too fried to log out of Facebook? We’re addicted to large-scale platforms, unable to return to the frivolous age of decentralized networks. How do we make sense of the rising disaffection with the platform condition? Zoom fatigue, cancel culture, crypto art, NFTs and psychic regression comprise core elements of a general theory of platform culture. Geert Lovink argues that we reclaim the internet on our own terms. Stuck on the Platform is a relapse-resistant story about the Brexit-Trump-Covid period (2019-2021), written for those with a passion for platform alternatives, built on a deep understanding of the digital slump.
 
