--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -1245,3 +1245,11 @@
   img: eleonore-blanc.jpg
   refs:
     twitter: blockblanc
+
+- id: dcbuilder
+  name: DCBuilder
+  altNames:
+    - dcbuilder.eth
+  img: dcbuilder.jpg
+  refs:
+    twitter: DCbuild3r
