--- a/src/events/2021.yaml
+++ b/src/events/2021.yaml
@@ -9,6 +9,8 @@
     country: cz
   venues:
     - name: Paralelní Polis Praha
+  organizers:
+    - josefj
   description: |
     ## Nonconformist hackathon
 
