--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -1,8 +1,21 @@
+- id: logos-parallel-society-congress-2024
+  date: "2024-11-11"
+  project: logos
+  major: true
+  name: Parallel Society Congress
+  place:
+    city: Bangkok
+    country: th
+  refs:
+    web: https://psc.logos.co/
+  description: |
+    As nation states lose their grasp, innovation emerges to imagine alternatives. Tap into the next wave of leaders, builders, and pioneers on the most important frontier of all. Expect activations, talks and workshops on building network states, pop-up communities, charter cities, decentralised governance and the technology that sustains it.
+
 - id: w3pn-eth-cypherpunk-congress-2024
   date: '2024-11-11'
   project: w3pn-events
   major: true
-  name: Ethereum Cypherpunk Congress @ Devcon 7
+  name: Ethereum Cypherpunk Congress
   place:
     city: Bangkok
     country: th
