--- a/src/structures/pp-prague/index.yaml
+++ b/src/structures/pp-prague/index.yaml
@@ -5,7 +5,7 @@ local: CZ/Prague
 labels:
   - physical space
 years: [ 2014, 2024 ]
-img: prague.jpg
+img: pp-prague.jpg
 code: prg
 caption: The original Paralelní Polis, established by the Czech art collective Ztohoven in 2014, was a social cryptoanarchy experiment that operated as physical space for over a decade in Prague's Holešovice district.
 refs:
