--- a/src/structures/pp-wien/index.yaml
+++ b/src/structures/pp-wien/index.yaml
@@ -6,7 +6,7 @@ labels:
 years: [ 2020, 2024 ]
 types: [ global, local ]
 code: vie
-img: wien.webp
+img: pp-wien.webp
 refs:
   twitter: ParallelePolis
   web: https://parallele.at
