--- a/src/structures/pp0/index.yaml
+++ b/src/structures/pp0/index.yaml
@@ -4,7 +4,7 @@ labels:
   - community
 years: [ 2024 ]
 code: pp0
-img: zero.webp
+img: pp0.webp
 altNames:
   - pp0
 caption: "[Draft] The digital-first meta instance of Paralelní Polis, which was born after the closure of the Prague location in 2024. This cypherpunk hub interconnect other instances and preserves the PP legacy (not only) in cyberspace."
