--- a/src/structures/ppba/index.yaml
+++ b/src/structures/ppba/index.yaml
@@ -6,7 +6,7 @@ years: [ 2018, 2020 ]
 types: [ local ]
 local: SK/Bratislava
 code: bts
-img: bratislava.webp
+img: ppba.webp
 refs:
   web: https://paralelnapolis.sk
   twitter: paralelnapolis
