--- a/src/structures/ppke/index.yaml
+++ b/src/structures/ppke/index.yaml
@@ -5,7 +5,7 @@ labels:
 years: [ 2021 ]
 local: SK/Košice
 code: ksc
-img: kosice.webp
+img: ppke.webp
 refs:
   web: https://paralelnapoliskosice.sk
   twitter: parallelpoliske
