--- a/src/events/2023.yaml
+++ b/src/events/2023.yaml
@@ -962,6 +962,7 @@
     - kx
   startTime: '2023-05-20T10:00:00+02:00'
   endTime: '2023-05-21T20:00:00+02:00'
+  aftermovie: GR3WMmi2Z14
   description: >-
     **Paralelní Polis brings you another Pizza Day Prague!**
 
