--- a/src/structures/pp-prague/index.yaml
+++ b/src/structures/pp-prague/index.yaml
@@ -33,7 +33,7 @@ projects:
     name_cs: Institut Kryptoanarchie
     years: [ 2014, 2024 ]
     types: [ institution ]
-    img: institute-of-cryptoanarchy.png
+    img: assets/institute-of-cryptoanarchy.png
     caption: |
       A collective promoting digital freedom and decentralized technologies. It focuses on cryptography and alternative economic models, aiming to empower individuals against censorship and surveillance.
     
@@ -63,7 +63,7 @@ projects:
     shortname: HCPP
     refs:
       web: https://hcpp.cz
-    img: hcpp.png
+    img: assets/hcpp.png
     caption: |
       An annual conference exploring cryptoanarchy, digital privacy, and decentralization. It brings together hackers, activists, and tech enthusiasts to discuss emerging technologies that promote individual freedom in the digital age.
     description: |
@@ -75,7 +75,7 @@ projects:
     types: [ conference ]
     refs:
       web: https://pizzaday.cz
-    img: pizza-day.jpg
+    img: assets/pizza-day.jpg
     caption: |
       The event series explores the technical and ideological challenges of scaling a decentralized cryptocurrency, bringing together the community to navigate these issues.
     description: |
@@ -88,7 +88,7 @@ projects:
     refs:
       web: https://ethprague.com
       twitter: EthPrague
-    img: ethprague.webp
+    img: assets/ethprague.webp
     caption: |
       A major Ethereum hackathon and conference in Prague, uniting developers and enthusiasts from the blockchain community. The event features workshops, talks, and networking, encouraging collaboration on innovative Ethereum projects.
  
@@ -97,7 +97,7 @@ projects:
     name_cs: Studio Paralelní Polis
     years: [ 2020, 2022 ]
     types: [ service ]
-    img: studio-pp.jpg
+    img: assets/studio-pp.jpg
     caption: |
       A broadcasting program that mirrors the original meetup format of art, science, and technology, enhanced with advanced content. Unlike many YouTube channels that recycle the same topics and personalities, we focus on in-depth discussions that go beyond clickbait and simplistic analyses.
     description_cs: |
@@ -107,7 +107,7 @@ projects:
     name: Bordel
     years: [ 2020, 2023 ]
     types: [ place ]
-    img: bordel.jpeg
+    img: assets/bordel.jpeg
     refs:
       web: https://bordel.paralelnipolis.cz
     caption: |
@@ -119,7 +119,7 @@ projects:
     name: Decentruck
     types: [ service ]
     years: [ 2020, 2021 ]
-    img: decentruck.jpg
+    img: assets/decentruck.jpg
     caption: |
       A multifunctional “crypto-liberation” truck promoting digital freedom, decentralization, and crypto-anarchy. This black vehicle travels across Europe and beyond, aiming to educate the public on cybersecurity, cryptocurrency adoption, and sustainable development.
     description: |
@@ -129,7 +129,7 @@ projects:
     name: Hackatoshi's Flying Circuit
     types: [ hackathon ]
     years: [ 2017, 2021 ]
-    img: hackathoshi-flying-circuit.png
+    img: assets/hackathoshi-flying-circuit.png
     refs:
       web: https://flyingcircuit.com
     caption: |
@@ -142,7 +142,7 @@ projects:
     name_cs: Mince
     types: [ awards ]
     years: [ 2017, 2020 ]
-    img: the-coins.jpeg
+    img: assets/the-coins.jpeg
     refs:
       web: https://paralelnipolis.cz/coins
     caption: |
@@ -175,7 +175,7 @@ projects:
     name: Paper Hub
     types: [ place, coworking ]
     years: [ 2014, 2024 ]
-    img: paper-hub.jpg
+    img: assets/paper-hub.jpg
     caption: |
       A cryptocurrency-only coworking space in Prague. It offers a unique work environment that embraces decentralized technologies and alternative economic models, supporting the broader mission of Paralelni Polis.
     description_cs: |
@@ -185,7 +185,7 @@ projects:
     name: Bitcoin Coffee
     years: [ 2014, 2024 ]
     types: [ service, place ]
-    img: bitcoin-coffee.png
+    img: assets/bitcoin-coffee.png
     caption: |
       A unique espresso bar, Bitcoin Coffee showcasing innovative technologies. By accepting only cryptocurrencies, it highlights practical applications of cryptocurrency, while drawing inspiration from Berlin's coffee culture to create exceptional flavors.
     description_cs: |
