--- a/src/structures/svobodny-pristav/index.yaml
+++ b/src/structures/svobodny-pristav/index.yaml
@@ -11,4 +11,5 @@ refs:
 projects:
   - id: ankap-serie
     name: Anarchokapitalismus (série)
-    years: [ 2016 ]
+    years: [ 2016, 2018 ]
+    caption: Series of talks on anarcho-capitalism in czech language by [Urza](/p/urza).
