--- a/src/structures/gweicz/index.yaml
+++ b/src/structures/gweicz/index.yaml
@@ -11,3 +11,6 @@ projects:
     name: ETHBrno
     caption: Independent, privacy-focused [lunarpunk](/t/lunarpunk) hackathon hosted in Brno, Czech Republic emphasizes Ethereum and Web3 security developments.
     years: [ 2021 ]
+    refs:
+      web: https://ethbrno.cz
+      twitter: ETHBrno
