--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -432,6 +432,7 @@
   date: '2024-04-18'
   startTime: '2024-04-18T17:30:00+02:00'
   endTime: '2024-04-18T22:00:00+02:00'
+  langs: [ cs ]
   description: >-
     Vstupte do světa, kde se hranice komfortní zóny neznají limit a domov je
     tam, kde otevřete laptop 🌴
