--- a/src/events/2023.yaml
+++ b/src/events/2023.yaml
@@ -393,6 +393,7 @@
   venues:
     - name: Paralelni Polis Praha
   date: '2023-10-20'
+  langs: [ cs ]
   startTime: '2023-10-20T17:45:00+02:00'
   endTime: '2023-10-20T19:45:00+02:00'
   description: >-
@@ -583,6 +584,7 @@
   venues:
     - name: Paralelni Polis Praha
   date: '2023-07-28'
+  langs: [ cs ]
   startTime: '2023-07-28T17:45:00+02:00'
   endTime: '2023-07-28T19:45:00+02:00'
   description: >-
@@ -1639,6 +1641,7 @@
   venues:
     - name: Paralelni Polis Praha
   date: '2023-02-17'
+  langs: [ cs ]
   startTime: '2023-02-17T19:19:00+01:00'
   endTime: '2023-02-17T21:19:00+01:00'
   description: >-
@@ -1720,6 +1723,7 @@
   venues:
     - name: Paralelni Polis Praha
   date: '2023-01-27'
+  langs: [ cs ]
   startTime: '2023-01-27T17:45:00+01:00'
   endTime: '2023-01-27T19:45:00+01:00'
   description: >-
