--- a/src/events/2025.yaml
+++ b/src/events/2025.yaml
@@ -1,3 +1,30 @@
+- id: protocol-berg-2025
+  date: "2025-06-12"
+  name: "Protocol Berg v2"
+  major: true
+  project: protocol-berg
+  days: 2
+  seq: 2
+  place:
+    name: Colosseum, Prenzlauer Berg
+    city: Berlin
+    country: de
+  refs:
+    web: https://protocol.berlin/
+  caption: |
+    Protocol Berg v2 is a conference focusing on protocol research, decentralized infrastructure, and core-developer experience. The two-day event with multiple stages, opportunities for technical workshops, and protocol community gatherings brings together protocol researchers and other stakeholders from different decentralized protocols. Attendance is free of charge. The event will not host any sponsors or commercial talks.
+  description: |
+    Protocol Berg v2 is a two-day technical conference targeting an audience of protocol/system/network engineers, decentralized-infrastructure administrators, researchers, and other curious minds. Protocol Berg aims to bring distributed technology ecosystems together to exchange concepts and technology, talk about shared open problems, and learn from each other.
+
+    Topics covered by the event orbits mainly around consensus protocols, distributed virtual machines, peer-to-peer networking, decentralized infrastructure, open-source governance, and protocol research.
+
+    Tickets will be free, as in free lemonade. All attendees had to adhere to the event's [Code of Conduct](https://protocol.berlin/conduct).
+
+    Protocol Berg v2 is a donation-backed, non-profit event. Therefore, there will be no sponsors.
+
+    Follow us on [X](https://x.com/protocol_berg), [Bluesky](https://bsky.app/profile/protocol.berlin), or [Matrix](https://matrix.to/#/%23protocol:dod.ngo) for updates. For the previous event, see [Protocol Berg 2023](https://2023.protocol.berlin/).
+
+
 - id: ksp25
   date: "2025-02-22"
   name: "KSP 2025: Kulturní války"
